syntax = "proto3";

package api;

option go_package = "github.com/talos-systems/sidero/app/metal-controller-manager/internal/api";

service Agent {
  rpc CreateServer(CreateServerRequest) returns (CreateServerResponse);
  rpc MarkServerAsWiped(MarkServerAsWipedRequest)
      returns (MarkServerAsWipedResponse);
  rpc ReconcileServerAddresses(ReconcileServerAddressesRequest)
      returns (ReconcileServerAddressesResponse);
}

message SystemInformation {
  string uuid = 1;
  string manufacturer = 2;
  string product_name = 3;
  string version = 4;
  string serial_number = 5;
  string sku_number = 6;
  string family = 7;
}

message CPU {
  string manufacturer = 1;
  string version = 2;
}

message CreateServerRequest {
  SystemInformation system_information = 1;
  CPU cpu = 2;
  string hostname = 3;
}

message Address {
  string type = 1;
  string address = 2;
}

message CreateServerResponse { bool wipe = 1; }

message MarkServerAsWipedRequest { string uuid = 1; }

message MarkServerAsWipedResponse {}

message ReconcileServerAddressesRequest {
  string uuid = 1;
  repeated Address address = 2;
}

message ReconcileServerAddressesResponse {}
